Agregar wrapping de codigo inline. Fixes #81

--- a/_assets/stylesheets/_main.scss
+++ b/_assets/stylesheets/_main.scss
@@ -66,6 +66,11 @@ pre {
   }
 }
 
+code {
+  white-space: normal;
+  word-wrap: break-word;
+}
+
 i {
   color: rgba(255, 255, 255, 0.4);
   padding: 0 5px 0 5px;
